--- a/src/Style.css
+++ b/src/Style.css
@@ -556,10 +556,10 @@ a:hover {
   #containerFastestConnection .verbindung-textfeld,
   #containerCheapestConnection button,
   #containerFastestConnection button {
-    margin: 1rem;
-    margin-top: 1.5rem;
+    margin: 0.5rem;
+    min-height: 0;
+    height: 60px;
   }
-
   #containerCheapestConnection *:last-child,
   #containerFastestConnection *:last-child {
     margin-left: 1rem;
